--- a/week01/index.html
+++ b/week01/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=divice-width,initial-scale=1.0">
         <title>Dalton Climer | WDD 130</title>
     </head>
