added missing closing tag

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -32,7 +32,7 @@
                 <p>Image of the Barranquilla Colombia Temple</p>
             </aside>
             <footer>
-            <p>Dalton Climer
+            <p>Dalton Climer</p>
         </footer>
     </body>
 </html>
