--- a/week01/index.html
+++ b/week01/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=divice-width,initial-scale=1.0">
         <title>Dalton Climer | WDD 130</title>
+        <link rel="stylesheet" href="../styles/styles.css">
     </head>
     <body>
         <header>
@@ -14,7 +15,7 @@
         </header>
         <main>
             <h1>Dalton Climer | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Profile image of Dalton Climer" width="200">
+            <img src="../images/profile.jpg" alt="Profile image of Dalton Climer" width="200">
             <p>Hello my name is Dalton Climer and this is me with my wife MJ.</p>
         </main>
         <footer>
