--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Dalton Climer | WDD 130</title>
         <meta name="description" content="Dalton Climer's WDD 130 main page for the class">
         <meta name="author" content="Dalton Climer">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
