changed path from index to images

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </header>
         <main>
             <h1>Dalton Climer | WDD 130</h1>
-            <img src="../images/profile.jpg" alt="Profile image of Dalton Climer" width="200">
+            <img src="images/profile.jpg" alt="Profile image of Dalton Climer" width="200">
             <p>Hello my name is Dalton Climer and this is me with my wife MJ.</p>
         </main>
         <aside>
             <h2>Idaho USA</h2>
-            <img src="../images/if_water_falls.jpg" alt="Idaho Falls waterfalls" width="200">
+            <img src="images/if_water_falls.jpg" alt="Idaho Falls waterfalls" width="200">
             <p>Idaho is a beautiful place to live and visit. There are many outdoor activities to do in the area.</p>
         </aside>
         <footer>
