--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <main>
-            <div class="container">
+            <div class="hero">
                 <img src="images/rafting.jpg" alt="rafting image">
             </div>
             <div class="centertop">
@@ -35,11 +35,11 @@
                 </aside>
             </div>
             <section>
-                <h1>History</h1>
+                <h2>History</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </section>
             <section>    
-                <h1>Adventure awaits you</h1>
+                <h2>Adventure awaits you</h2>
                 <img src="images/placeholderhappyrafting.png" alt="1">
                 <img src="images/placeholderhappyrafting.png" alt="2">
                 <img src="images/placeholderhappyrafting.png" alt="3"> 
