changed css to represent the code required

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,14 +25,11 @@
         <main>
             <div class="hero">
                 <img src="images/rafting.jpg" alt="rafting image">
-            </div>
-            <div class="centertop">
                 <h1>Dry Oar Rafting</h1>
-            </div>
-                <aside class="center">
-                    <img src="images/raftinghappy.jpg" alt="People on a rafting trip">
-                    <p>lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </aside>
+                <article>
+                    <img src="images/raftinghappy.jpg" alt="people on a rafting trip">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </article>
             <section>
                 <h2>History</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
