changed css to new version

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,31 +16,46 @@
         <header>
             <img src="images/logo.png" alt="company logo" width="200">
             <nav>
-                <a href="index.html">home</a>
-                <a href="about.html">about us</a>
-                <a href="trips.html">trips</a>
-                <a href="contact.html">contact</a>
+                <ul>
+                    <a href="index.html">home</a>
+                    <a href="about.html">about us</a>
+                    <a href="trips.html">trips</a>
+                    <a href="contact.html">contact</a>
+                </ul>
             </nav>
         </header>
         <main>
             <div class="hero">
-                <img src="images/rafting.jpg" alt="rafting image">
+                <img src="images/heroimg.jpg" alt="rafting image">
                 <h1>Dry Oar Rafting</h1>
-                <article>
+                <article class="hero-article">
                     <img src="images/raftinghappy.jpg" alt="people on a rafting trip">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </article>
-            <section>
+                </div>    
+            <section class="history">
                 <h2>History</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <img src="images/placeholderhappyrafting.png" alt="history image">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Consectetur aliquam a, facilis culpa tempore quisquam minus 
+                    repellat enim eaque illo dolore autem praesentium porro, 
+                    omnis sint quasi totam quo in!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Ullam eaque iste eius laudantium provident commodi eos. 
+                    Odio libero porro voluptates a, voluptate provident, 
+                    quasi ipsum consequatur quibusdam eius iste repellendus.</p>
             </section>
-            <section>    
+            <section class="adventure">    
                 <h2>Adventure awaits you</h2>
                 <img src="images/placeholderhappyrafting.png" alt="1">
+                    <p>caption</p>
                 <img src="images/placeholderhappyrafting.png" alt="2">
-                <img src="images/placeholderhappyrafting.png" alt="3"> 
+                    <p>caption</p>
+                <img src="images/placeholderhappyrafting.png" alt="3">
+                    <p>caption</p> 
                 <img src="images/placeholderhappyrafting.png" alt="4">
+                    <p>caption</p>
                 <img src="images/placeholderhappyrafting.png" alt="5">
+                    <p>caption</p>
             </section>
         </main>
         <footer>
