--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,16 +46,41 @@
             </section>
             <section class="adventure">    
                 <h2>Adventure awaits you</h2>
-                <img src="images/placeholderhappyrafting.png" alt="1">
-                    <p>caption</p>
-                <img src="images/placeholderhappyrafting.png" alt="2">
-                    <p>caption</p>
-                <img src="images/placeholderhappyrafting.png" alt="3">
-                    <p>caption</p> 
-                <img src="images/placeholderhappyrafting.png" alt="4">
-                    <p>caption</p>
-                <img src="images/placeholderhappyrafting.png" alt="5">
-                    <p>caption</p>
+                <figure>
+                    <img src="images/placeholderhappyrafting.png" alt="1">
+                    <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Quasi veniam non optio animi placeat consectetur, 
+                        illum et consequuntur at nesciunt repellat, minima eum deserunt, 
+                        iure ullam tenetur blanditiis corporis dolores!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/placeholderhappyrafting.png" alt="2">
+                    <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Quasi veniam non optio animi placeat consectetur, 
+                        illum et consequuntur at nesciunt repellat, minima eum deserunt, 
+                        iure ullam tenetur blanditiis corporis dolores!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/placeholderhappyrafting.png" alt="3">
+                    <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Quasi veniam non optio animi placeat consectetur, 
+                        illum et consequuntur at nesciunt repellat, minima eum deserunt, 
+                        iure ullam tenetur blanditiis corporis dolores!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/placeholderhappyrafting.png" alt="4">
+                    <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Quasi veniam non optio animi placeat consectetur, 
+                        illum et consequuntur at nesciunt repellat, minima eum deserunt, 
+                        iure ullam tenetur blanditiis corporis dolores!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/placeholderhappyrafting.png" alt="5">
+                    <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Quasi veniam non optio animi placeat consectetur, 
+                        illum et consequuntur at nesciunt repellat, minima eum deserunt, 
+                        iure ullam tenetur blanditiis corporis dolores!</figcaption> 
+                </figure>
             </section>
         </main>
         <footer>
