fixed found errors via the validator

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
         
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dalton Climer | WDD 130 | Rafting site</title>
+        <title>Dalton Climer | WDD 130 | Rafting site | About Us</title>
         <meta name="description" content="White water rafting about page">
         <meta name="author" content="Dalton Climer">
         <link rel="stylesheet" href="styles/rafting.css">
@@ -17,21 +17,24 @@
             <img src="images/logo.png" alt="company logo" width="200">
             <nav>
                 <ul>
+                    <li>
                     <a href="index.html">home</a>
                     <a href="about.html">about us</a>
                     <a href="trips.html">trips</a>
                     <a href="contact.html">contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
             <div class="hero">
                 <img src="images/heroimg.jpg" alt="rafting image">
-                <h1>Dry Oar Rafting</h1>
                 <article class="hero-article">
+                    <h1>Dry Oar Rafting</h1>
                     <img src="images/raftinghappy.jpg" alt="people on a rafting trip">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>    
+                </article>
+            </div>    
             <section class="history">
                 <h2>History</h2>
                 <img src="images/placeholderhappyrafting.png" alt="history image">
