--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,7 +27,6 @@
             </nav>
         </header>
         <main>
-            <body>
                 <div class title>
                     <h1>Meet the team</h1>
                 </div>
@@ -59,9 +58,11 @@
                             <input type="email" id="email" name="email" placeholder="Enter your email">
                         </div>
                         <div class="radio">
-                            <input type="radio" id="general" name="reason" value="radio_group">General Inquiry</imput>
-                            <input type="radio" id="reason" name="reason" value="reservation question">reservation question</imput>
-                            <input type="radio" id="reason" name="reason" value="website suggestion">website suggestion</imput>
+                            <input type="radio" id="general" name="reason" value="radio_group">General Inquiry
+                            <input type="radio" id="reservation" name="reason" value="reservation question">reservation question
+                        </div>
+                        <div>
+                            <input type="radio" id="suggestion" name="reason" value="website suggestion">website suggestion
                         </div>
                         <div class="message">
                             <textarea id="message" name="message" rows="4" placeholder="Enter your message here"></textarea>
@@ -109,7 +110,6 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
                 </form>
-            </body>
         </main>
         <footer>
             <p>©2025 Dry Oar Rafting Co. Dalton Climer United States of America</p>
@@ -125,6 +125,7 @@
                 </a>
                 <a href="https://app.moqups.com/ifG94PWr8opA2prgD6AwTtDTWiFXhCUQ/view/page/ad64222d5">mockup
                     <img src="/week05/images/mockupimge.png" alt="facebook">
+                </a>
             </nav>
         </footer>
     </body>
