changed filepath for css

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -10,7 +10,7 @@
         <title>Dalton Climer | WDD 130 | Rafting site | Contact</title>
         <meta name="description" content="White water rafting contact page">
         <meta name="author" content="Dalton Climer">
-        <link rel="stylesheet" href="/week05/styles/contact.css">
+        <link rel="stylesheet" href="styles/contact.css">
     </head>
     <body>
         <header>
