--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.png" alt="company logo" width="200">
+            <img src="/wwr/images/logo.png" alt="company logo" width="200">
             <nav>
                 <ul>
                     <li>
