--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li>
                     <a href="index.html">home</a>
-                    <a href="/wwr/about.html">about us</a>
+                    <a href="about.html">about us</a>
                     <a href="trips.html">trips</a>
                     <a href="contact.html">contact</a>
                     </li>
