--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -32,7 +32,7 @@
                 </div>
                 <form class="map">
                     <div class="mapload">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d38818.62203501633!2d-113.36344157031793!3d43.68536943679767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1743974587652!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d38818.62203501633!2d-113.36344157031793!3d43.68536943679767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1743974587652!5m2!1sen!2sus" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <fieldset class="contact-info">
                         <legend>Contact Information</legend>
@@ -115,16 +115,16 @@
             <p>©2025 Dry Oar Rafting Co. Dalton Climer United States of America</p>
             <nav class="sociallinks">
                 <a href="https://www.facebook.com">facebook
-                    <img src="/wwr/images/facebook.png" alt="facebook">
+                    <img src="images/facebook.png" alt="facebook">
                 </a>
                 <a href="https://www.twitter.com">twitter
-                    <img src="/wwr/images/twitter.png" alt="twitter">
+                    <img src="images/twitter.png" alt="twitter">
                 </a>
                 <a href="https://www.instagram.com">instagram
-                    <img src="/wwr/images/instagram.png" alt="instagram">
+                    <img src="images/instagram.png" alt="instagram">
                 </a>
                 <a href="https://app.moqups.com/ifG94PWr8opA2prgD6AwTtDTWiFXhCUQ/view/page/ad64222d5">mockup
-                    <img src="/week05/images/mockupimge.png" alt="facebook">
+                    <img src="images/mockupimge.png" alt="facebook">
                 </a>
             </nav>
         </footer>
