--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dalton Climer | WDD 130 | Rafting site | Contact</title>
-        <meta name="description" content="White water rafting contact page">
+        <meta name="description" content="Dry oar rafting contact page">
         <meta name="author" content="Dalton Climer">
         <link rel="stylesheet" href="styles/contact.css">
     </head>
