--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -73,7 +73,7 @@
 
                         </div>
                         <div class="button">
-                            <button>Submit</button>
+                            <button type="submit">Submit</button>
                         </div>
                     </fieldset>
                 </form>
@@ -83,7 +83,7 @@
                         <h2>Chad</h2>
                         <figure>
                             <img src="images/noimage.jpg">
-                            <figcaption>Chad</figcaption>
+                            <figcaption>Chad</figcaption><figcaption></figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
@@ -94,7 +94,7 @@
                         <h2>Wendy</h2>
                         <figure>
                             <img src="images/noimage.jpg">
-                            <figcaption>Wendy</figcaption>
+                            <figcaption>Wendy</figcaption><figcaption></figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
@@ -105,7 +105,7 @@
                         <h2>Sam</h2>
                         <figure>
                             <img src="images/noimage.jpg">
-                            <figcaption>Sam</figcaption>
+                            <figcaption>Sam</figcaption><figcaption></figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
