--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -73,7 +73,7 @@
 
                         </div>
                         <div class="button">
-                            <button type="submit">Submit</button>
+                            <button type="submit">Enter</button>
                         </div>
                     </fieldset>
                 </form>
