fixed radio elemets reqs

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,11 +58,13 @@
                             <input type="email" id="email" name="email" placeholder="Enter your email">
                         </div>
                         <div class="radio">
-                            <input type="radio" id="general" name="reason" value="radio_group">General Inquiry
-                            <input type="radio" id="reservation" name="reason" value="reservation question">reservation question
-                        </div>
+                            <input type="radio" id="general" name="reason" value="radio_group">
+                            <label for="general">General</label>
+                            <input type="radio" id="reservation" name="reason" value="reservation question">
+                            <label for="reservation">Reservation question</label>
                         <div>
-                            <input type="radio" id="suggestion" name="reason" value="website suggestion">website suggestion
+                            <input type="radio" id="suggestion" name="reason" value="website suggestion">
+                            <label for="suggestion">Website suggestion</label>
                         </div>
                         <div class="message">
                             <textarea id="message" name="message" rows="4" placeholder="Enter your message here"></textarea>
@@ -83,7 +85,7 @@
                         <h2>Chad</h2>
                         <figure>
                             <img src="images/noimage.jpg">
-                            <figcaption>Chad</figcaption><figcaption></figcaption>
+                            <figcaption>Chad</figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
@@ -94,7 +96,7 @@
                         <h2>Wendy</h2>
                         <figure>
                             <img src="images/noimage.jpg">
-                            <figcaption>Wendy</figcaption><figcaption></figcaption>
+                            <figcaption>Wendy</figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
@@ -105,7 +107,7 @@
                         <h2>Sam</h2>
                         <figure>
                             <img src="images/noimage.jpg">
-                            <figcaption>Sam</figcaption><figcaption></figcaption>
+                            <figcaption>Sam</figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
                     </fieldset>
