fixed new html errors

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -62,6 +62,7 @@
                             <label for="general">General</label>
                             <input type="radio" id="reservation" name="reason" value="reservation question">
                             <label for="reservation">Reservation question</label>
+                        </div>
                         <div>
                             <input type="radio" id="suggestion" name="reason" value="website suggestion">
                             <label for="suggestion">Website suggestion</label>
