--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Martel&display=swap" rel="stylesheet">
-         
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dalton Climer | WDD 130 | Rafting site | Contact</title>
         <meta name="description" content="Dry oar rafting contact page">
         <meta name="author" content="Dalton Climer">
         <link rel="stylesheet" href="styles/contact.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Martel&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -76,7 +75,7 @@
 
                         </div>
                         <div class="button">
-                            <button type="submit">Enter</button>
+                            <button type="submit">Send message</button>
                         </div>
                     </fieldset>
                 </form>
