made changes for grader

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dalton Climer | WDD 130 | Rafting site | Contact</title>
+        <title>Dalton Climer | WDD 130 | Dry Oar Rafting | Contact</title>
         <meta name="description" content="Dry oar rafting contact page">
         <meta name="author" content="Dalton Climer">
-        <link rel="stylesheet" href="styles/contact.css">
+        <link rel="stylesheet" href="styles/rafting.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Martel&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="contact">
                 <div class title>
                     <h1>Meet the team</h1>
                 </div>
