--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dalton Climer | WDD 130 | Rafting site | About Us</title>
-        <meta name="description" content="White water rafting about page">
+        <title>Dalton Climer | WDD 130 | Dry Oar Rafting | About Us</title>
+        <meta name="description" content="Dry Oar Rafting about page">
         <meta name="author" content="Dalton Climer">
         <link rel="stylesheet" href="styles/rafting.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
