fixed grade issues

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,11 +24,11 @@
                     </li>
                 </ul>
             </nav>
+            <div class="title">
+                <h1>Meet the team</h1>
+            </div>
         </header>
         <main class="contact">
-                <div class title>
-                    <h1>Meet the team</h1>
-                </div>
                 <form class="map">
                     <div class="mapload">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d38818.62203501633!2d-113.36344157031793!3d43.68536943679767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1743974587652!5m2!1sen!2sus" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -83,8 +83,8 @@
                     <fieldset class="poi-fieldset">
                         <legend>Chad</legend>
                         <h2>Chad</h2>
-                        <figure>
-                            <img src="images/noimage.jpg">
+                        <figure class="poi-img">
+                            <img src="images/chad.jpg">
                             <figcaption>Chad</figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
@@ -94,8 +94,8 @@
                     <fieldset class="poi-fieldset">
                         <legend>Wendy</legend>
                         <h2>Wendy</h2>
-                        <figure>
-                            <img src="images/noimage.jpg">
+                        <figure class="poi-img">
+                            <img src="images/wendy.jpg">
                             <figcaption>Wendy</figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
@@ -105,8 +105,8 @@
                     <fieldset class="poi-fieldset">
                         <legend>Sam</legend>
                         <h2>Sam</h2>
-                        <figure>
-                            <img src="images/noimage.jpg">
+                        <figure class="poi-img">
+                            <img src="images/sam.jpg">
                             <figcaption>Sam</figcaption>
                         </figure>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
