--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,27 +24,31 @@
                     </li>
                 </ul>
             </nav>
+            <div class="title">
+                <h1>About</h1>
+            </div>
         </header>
         <main>
             <div class="hero">
-                <img src="images/heroimg.jpg" alt="rafting image">
+                <img src="images/hero.jpg" alt="rafting image">
                 <article class="hero-article">
                     <h1>Dry Oar Rafting</h1>
                     <img src="images/raftinghappy.jpg" alt="people on a rafting trip">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Dry oar rafting was founded in 1940's as a waste management company
+                        for the INL. we have since changed out focus to rafting.
+                        This is a family owned company that has gone through many changes.
+                    </p>
                 </article>
             </div>    
             <section class="history">
                 <h2>History</h2>
-                <img src="images/placeholderhappyrafting.png" alt="history image">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Consectetur aliquam a, facilis culpa tempore quisquam minus 
-                    repellat enim eaque illo dolore autem praesentium porro, 
-                    omnis sint quasi totam quo in!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Ullam eaque iste eius laudantium provident commodi eos. 
-                    Odio libero porro voluptates a, voluptate provident, 
-                    quasi ipsum consequatur quibusdam eius iste repellendus.</p>
+                <img src="images/blackwoods.jpg" alt="history image">
+                <p>Founded in 1942 by Sylas and Elan Blackwood as part of The Manhattan Project.
+                    It was origionally a waste management company for the INL. In 1950 the company
+                    made a drastic change and started offering rafting trips on the Lost River.
+                    Eventually the river dried up and the company changed its name to Dry Oar Rafting.
+                    We specialize in a unique type of rafting that is unlike any other.
+                </p>
             </section>
             <section class="adventure">    
                 <h2>Adventure awaits you</h2>
