--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -87,7 +87,9 @@
                             <img src="images/chad.jpg">
                             <figcaption>Chad</figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
+                        <p>Chad is our most experienced guide with 10 years of experience. Chad has lived and worked
+                            here in Idaho all his life and is our resident adrenaline junkie. </p>
+                        <p>Chad is a great guide for those looking for a more thrilling experience.</p>
                     </fieldset>
                 </form>
                 <form class="poi-2">
@@ -98,7 +100,10 @@
                             <img src="images/wendy.jpg">
                             <figcaption>Wendy</figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
+                        <p>Wendy has lived in Idaho for 5 years now and has worked here just as long.
+                            She has 15 years of experience in the rafting industry and is our resident expert on the Lost River.</p>
+                        <p>Wendy is a great guide for those looking for a more relaxed experience.</p>
+                        </p>
                     </fieldset>
                 </form>
                 <form class="poi-3">
@@ -109,7 +114,9 @@
                             <img src="images/sam.jpg">
                             <figcaption>Sam</figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero nihil non totam possimus voluptatum quo voluptate, tempore saepe accusantium laboriosam, ducimus maxime obcaecati blanditiis dolorum? Velit optio rem quasi.</p>
+                        <p>Sam is our newest guide but dont let that scare you off she has 5 years experience in the field.
+                            Sam enjoys horror movies and is a very outgoing and outdoorsy person.</p>
+                        <p>Dont be alarmed when she is speaking latin, it has actually reduced the mortality count.</p>
                     </fieldset>
                 </form>
         </main>
