--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,9 +39,9 @@
             </div>
         </main>
         <main class="description">
-            <h2>Dry Oar Rafting Rafting on the Lost River!</h2>
+            <h2>Dry Oar Rafting - Rafting on the Lost River!</h2>
             <p>Experience Rafting like never before here at Dry Oar Rafting located in Lost River Idaho.
-                We off a unique experience like no other. We have a variety of trips, from the beginner friendly 
+                We offer a unique experience like no other. We have a variety of trips, from the beginner friendly 
                 Dusty Drift to the veteran only Sandstorm. We have something for everyone!
             </p>
             <div>
