--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,10 +30,10 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/hero.jpg" alt="rafting image">
+                <img src="images/hero1.jpg" alt="rafting image">
                 <article class="hero-article">
                     <h1>Dry Oar Rafting</h1>
-                    <img src="images/raftinghappy.jpg" alt="people on a rafting trip">
+                    <img src="images/herosmall.jpg" alt="people on a rafting trip">
                     <p>Dry oar rafting was founded in 1940's as a waste management company
                         for the INL. we have since changed out focus to rafting.
                         This is a family owned company that has gone through many changes.
