fixed "main" issues

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,53 +24,52 @@
                     </li>
                 </ul>
             </nav>
-            <div class="title">
-                <h1>Home</h1>
-            </div>
         </header>
-        <main class="home">
-            <div class="hero">
-                <img src="images/hero1.jpg" alt="Hero Image">
-                <div class="call-button">
-                    <h1>Adventure Awaits</h1>
-                    <p>Join us for an unforgettable rafting experience!</p>
-                    <a href="trips.html" class="button">Sign Up Now!</a>
-                </div>   
+        <main>
+            <div class="home">
+                <div class="hero">
+                    <img src="images/hero1.jpg" alt="Hero Image">
+                    <div class="call-button">
+                        <h1>Adventure Awaits</h1>
+                        <p>Join us for an unforgettable rafting experience!</p>
+                        <a href="trips.html" class="button">Sign Up Now!</a>
+                    </div>   
+                </div>
             </div>
-        </main>
-        <main class="description">
-            <h2>Dry Oar Rafting - Rafting on the Lost River!</h2>
-            <p>Experience Rafting like never before here at Dry Oar Rafting located in Lost River Idaho.
-                We offer a unique experience like no other. We have a variety of trips, from the beginner friendly 
-                Dusty Drift to the veteran only Sandstorm. We have something for everyone!
-            </p>
-            <div>
-                <img src="images/dusty-drift.jpg" alt="Dusty Drift">
+            <div class="description">
+                <h2>Dry Oar Rafting - Rafting on the Lost River!</h2>
+                <p>Experience Rafting like never before here at Dry Oar Rafting located in Lost River Idaho.
+                    We offer a unique experience like no other. We have a variety of trips, from the beginner friendly 
+                    Dusty Drift to the veteran only Sandstorm. We have something for everyone!
+                </p>
+                <div>
+                    <img src="images/dusty-drift.jpg" alt="Dusty Drift">
+                </div>
+                <p>Be Advised</p>
+                <p>All customers should use provided safety equipment at all times. 
+                    These items include but are not limited to: goggles, life vests, sunscreen, 
+                    light colored clothing, helmets and water.</p>
+                <div>
+                    <img src="images/sandstorm.jpg" alt="Sandstorm">
+                </div>
+                <form>
+                    <fieldset>
+                        <legend>contact us</legend>
+                        <h2>Would you like to recieve our newsletter?</h2>
+                        <div class="name">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" placeholder="Enter your name">
+                        </div>
+                        <div class="email">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="Enter your email">
+                        </div>
+                        <div class="button">
+                            <button type="submit">Sign up with just one click</button>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
-            <p>Be Advised</p>
-            <p>All customers should use provided safety equipment at all times. 
-                These items include but are not limited to: goggles, life vests, sunscreen, 
-                light colored clothing, helmets and water.</p>
-            <div>
-                <img src="images/sandstorm.jpg" alt="Sandstorm">
-            </div>
-            <form>
-                <fieldset>
-                    <legend>contact us</legend>
-                    <h2>Would you like to recieve our newsletter?</h2>
-                    <div class="name">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Enter your name">
-                    </div>
-                    <div class="email">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="Enter your email">
-                    </div>
-                    <div class="button">
-                        <button type="submit">Sign up with just one click</button>
-                    </div>
-                </fieldset>
-            </form>
         </main>
         <footer>
             <p>©2025 Dry Oar Rafting Co. Dalton Climer United States of America</p>
