--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,11 +24,16 @@
                     </li>
                 </ul>
             </nav>
-            <div class="title">
-                <h1>Meet the team</h1>
-            </div>
         </header>
-        <main class="contact">
+        <main>
+            <div class="hero">
+                <img src="images/hero1.jpg" alt="Hero Image">
+                <div class="call-button">
+                    <h1>Have questions?</h1>
+                    <a href="contact.html" class="button">Ask us here!</a>
+                </div>  
+            </div>
+            <div class="contact">
                 <form class="map">
                     <div class="mapload">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d38818.62203501633!2d-113.36344157031793!3d43.68536943679767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1743974587652!5m2!1sen!2sus" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -103,7 +108,6 @@
                         <p>Wendy has lived in Idaho for 5 years now and has worked here just as long.
                             She has 15 years of experience in the rafting industry and is our resident expert on the Lost River.</p>
                         <p>Wendy is a great guide for those looking for a more relaxed experience.</p>
-                        </p>
                     </fieldset>
                 </form>
                 <form class="poi-3">
@@ -119,6 +123,7 @@
                         <p>Dont be alarmed when she is speaking latin, it has actually reduced the mortality count.</p>
                     </fieldset>
                 </form>
+            </div>
         </main>
         <footer>
             <p>©2025 Dry Oar Rafting Co. Dalton Climer United States of America</p>
