--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -35,7 +35,9 @@
             </div>
             <div class="contact">
                 <form class="map">
-
+                    <div class="mapload">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d38818.62203501633!2d-113.36344157031793!3d43.68536943679767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1743974587652!5m2!1sen!2sus" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                     <fieldset class="contact-info">
                         <legend>Contact Information</legend>
                         <div>
